2011-10-19  Andrew Myers <asm198@gmail.com>

	* swank-allegro.lisp (frob-allegro-field-def): Add missing type to
	ecase for inspector.

2011-10-13  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (all-completions): Remove mixed case syms e.g |Foo|.
	"fo" is not a prefix of "|Foo|" and it would be problematic later.

2011-10-05  Stas Boukarev  <stassats@gmail.com>

	* swank.lisp (clear-repl-variables): New functions, clears *, /,
	and + variables.

2011-09-28  Stas Boukarev  <stassats@gmail.com>

	* slime.el: Remove (require 'hideshow), it's not used anymore.
	Spotted by Leo Liu.

2011-09-27  Mark Evenson  <evenson@panix.com>

	* swank-abcl.lisp (describe-symbol-for-emacs): Differentiate
	between function, generic function, special forms, and macros by
	copying SBCL implementation.

2011-09-13  Christophe Rhodes  <csr21@cantab.net>

	* slime.el (slime-simple-complete-symbol): only display "Complete
	but not unique" message if the partial completion figures in the
	completion list.

2011-08-31  Anton Kovalenko  <anton@sw4me.com>

	* swank-sbcl.lisp (preferred-communication-style): check for
	:sb-thread before :win32, so :spawn is preferred for threaded
	Windows builds.

2011-08-31  Nikodemus Siivola  <nikodemus@random-state.net>

	* swank-sbcl.lisp (make-socket-io-stream): Backwards compatibility with
	SBCL < 1.0.42.43 -- and bugfix.

2011-08-26  Mark Evenson  <evenson@panix.com>

	* swank-abcl.lisp (class-slots): Use exported symbol allowing
	classes with non-standard metaobjects to be inspected.

2011-08-18  Helmut Eller  <heller@common-lisp.net>

	Fix line numbers for compiler notes if is narrowing was in effect.

	* slime.el (slime-canonicalized-location): Widen before calling
	line-number-at-pos.

2011-08-17  Stas Boukarev  <stassats@gmail.com>

	* swank-allegro.lisp (with-redirected-y-or-n-p): Fix modern-mode
	issues.
	Patch by Andrew Myers.

2011-08-09  Nikodemus Siivola  <nikodemus@random-state.net>
