@@ -1,3 +1,11 @@
+2011-11-03  Helmut Eller  <heller@common-lisp.net>
+
+	Remove dependecy on FLEXI-STREAMS for Lispworks.
+
+	* swank-lispworks.lisp (make-flexi-stream): Deleted.
+	(utf8-stream): New class to do the transcoding.
+	(accept-connection): Use it.
+
 2011-10-19  Andrew Myers <asm198@gmail.com>
 
 	* swank-allegro.lisp (frob-allegro-field-def): Add missing type to
